# agentledger

./: PLAN.md  README.md  SUPABASE_SETUP.md  demo.mjs  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  push-v18.sh  tailwind.config.ts  test-agent.mjs  vercel.json  vitest.config.ts
cli/: package.json
docs/: MONITORING.md  SUPABASE_AUTH_SETUP.md
scripts/: setup-and-seed.sh
sdk/: README.md  package.json  tsconfig.esm.json  tsconfig.json
sdk-python/: README.md  pyproject.toml
sdk-python/agentledger/: __init__.py  _async_client.py  client.py  types.py
sdk-python/agentledger/integrations/: __init__.py  langchain.py  openai_agents.py
sdk/src/: index.ts
src/: middleware.ts
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: GAPageTracker.tsx  Logo.tsx  TraceTimeline.tsx
src/lib/: analytics.ts  anomalies.ts  audit.ts  auth-user.ts  auth.ts  email-typo.ts  errors.ts  forecasting.ts  notifications.ts  permissions.ts  policies.ts  policy-templates.ts  rate-limit.ts  rollbacks.ts  supabase-server.ts  supabase.ts  usage.ts  validate.ts  webhooks.ts
supabase/: setup.sql
supabase/migrations/: 001_initial_schema.sql  002_auth_org_members.sql  003_traces_io_notifications.sql  003_webhooks_keys.sql  004_usage_limits.sql  005_budget_period_start.sql  006_search_filtering.sql  007_environments.sql  008_policies.sql  009_approvals.sql  010_baselines.sql  011_evaluations.sql  012_rollback_hooks.sql  013_team_management.sql  014_new_features.sql  015_discord_pagerduty.sql  016_performance_indexes.sql  017_fix_rls_authenticated_reads.sql
tests/: setup.ts
tests/api/: anomalies.test.ts  approvals.test.ts  policies.test.ts  rollbacks.test.ts
tests/e2e/: run.mjs  smoke.mjs
tests/features/: new-features.test.ts  traces-io-notifications.test.ts
tests/integration/: api-logic.test.ts
tests/resilience/: resilience.test.ts
tests/sdk/: integrations.test.ts  sdk.test.ts
tests/unit/: auth.test.ts  edge-cases.test.ts  (+2 more)
(+79 files in other folders)
