[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger"
version = "0.1.0"
description = "Python SDK for AgentLedger - AI agent observability and budget management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
openai = ["openai>=1.0"]

[project.urls]
Homepage = "https://agentledger.co"
Repository = "https://github.com/agentledger/agentledger"
Documentation = "https://docs.agentledger.co"
