[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger-py"
version = "0.5.0"
description = "Track, monitor, and control AI agent actions. The missing observability layer for autonomous agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "AgentLedger", email = "hello@agentledger.co" }]
keywords = ["ai", "agents", "monitoring", "observability", "langchain", "openai", "llm", "safety", "budget", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
openai = ["openai>=1.0"]

[project.urls]
Homepage = "https://agentledger.co"
Repository = "https://github.com/miken1988/agentledger"
Documentation = "https://agentledger.co/docs"
Changelog = "https://agentledger.co/changelog"
